fix: overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -16,9 +16,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: $background-main;
   overflow: hidden;
-  max-width: 100vw;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+#root {
+  overflow: hidden;
 }
